--- a/package.json
+++ b/package.json
@@ -1,27 +1,37 @@
 {
-  "name": "massive-trading-engine",
+  "name": "high-strategy-evm-mev-bot",
   "version": "1.0.0",
-  "description": "High-Frequency MEV Trading Engine",
+  "description": "High-speed, multi-threaded MEV bot for EVM chains.",
   "main": "dist/index.js",
-  "type": "module", 
+  "type": "module",
   "scripts": {
-    "clean": "rm -rf dist",
-    "prebuild": "npm run clean",
+    "prebuild": "rm -rf dist",
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "ts-node src/index.ts"
+    "dev": "npm run build && npm run start",
+    "watch": "tsc -w"
   },
+  "keywords": [
+    "mev",
+    "flashbots",
+    "ethereum",
+    "typescript",
+    "workers"
+  ],
+  "author": "MEV Engineer",
+  "license": "ISC",
   "dependencies": {
-    "axios": "^1.6.8",
-    "dotenv": "^16.4.5",
-    "ethers": "^5.7.2",
     "@flashbots/ethers-provider-bundle": "^0.6.0",
-    "express": "^4.18.3"
+    "axios": "^1.6.2",
+    "dotenv": "^16.3.1",
+    "ethers": "^5.7.2",
+    "express": "^4.18.2",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
-    "@types/node": "^20.12.7",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.4.5",
-    "@types/express": "^4.17.21"
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.10.3",
+    "@types/winston": "^2.4.4",
+    "typescript": "^5.3.2"
   }
 }
