--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,28 +1,28 @@
 {
   "compilerOptions": {
     /* Project Options */
-    "target": "es2020",                                /* Specify ECMAScript target version */
-    "module": "NodeNext",                              /* Specify module code generation for Node.js ESM */
-    "moduleResolution": "NodeNext",                    /* Resolve modules using Node.js ESM logic */
-    "esModuleInterop": true,                           /* Enables interop between CommonJS and ES Modules */
-    "forceConsistentCasingInFileNames": true,          /* Ensure consistent file casing */
-    "strict": true,                                    /* Enable all strict type-checking options */
-    "skipLibCheck": true,                              /* Skip type checking of declaration files */
-    "outDir": "./dist",                                /* Redirect output structure to this directory */
-    "rootDir": "./src",                                /* Specify the root directory of source files */
+    "target": "es2020",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "skipLibCheck": true,
+    "outDir": "./dist",
+    "rootDir": ".",    /* FIXED: This tells the compiler the source root is the current directory */
 
     /* Type Checking */
-    "noImplicitAny": true,                             /* Raise error on expressions and declarations with an implied 'any' type */
-    "strictNullChecks": true,                          /* Enable strict null checks */
+    "noImplicitAny": true,
+    "strictNullChecks": true,
 
     /* Other */
-    "sourceMap": false                                 /* Do not emit source map files */
+    "sourceMap": false
   },
   "include": [
-    "**/*.ts"                                          /* NEW: Includes all .ts files recursively */
+    "**/*.ts"
   ],
   "exclude": [
-    "node_modules",                                    /* MUST exclude node_modules to prevent compiling dependencies */
-    "dist"                                             /* MUST exclude the output directory */
+    "node_modules",
+    "dist"
   ]
 }
