--- a/package.json
+++ b/package.json
@@ -1,37 +1,28 @@
 {
   "name": "high-strategy-evm-mev-bot",
   "version": "1.0.0",
-  "description": "High-speed, multi-threaded MEV bot for EVM chains.",
+  "description": "High-frequency EVM MEV strategy bot with worker pool.",
   "main": "dist/index.js",
-  "type": "module",
   "scripts": {
     "prebuild": "rm -rf dist",
     "build": "tsc",
-    "start": "node dist/index.js",
-    "dev": "npm run build && npm run start",
-    "watch": "tsc -w"
+    "start": "node dist/index.js"
   },
   "keywords": [
     "mev",
     "flashbots",
-    "ethereum",
-    "typescript",
-    "workers"
+    "evm"
   ],
-  "author": "MEV Engineer",
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "@flashbots/ethers-provider-bundle": "^0.6.0",
-    "axios": "^1.6.2",
-    "dotenv": "^16.3.1",
+    "@flashbots/ethers-provider-bundle": "0.15.0",
     "ethers": "^5.7.2",
-    "express": "^4.18.2",
-    "winston": "^3.11.0"
+    "express": "^4.18.2"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.10.3",
-    "@types/winston": "^2.4.4",
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.10.0",
     "typescript": "^5.3.2"
   }
 }
