--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@flashbots/ethers-provider-bundle": "0.15.0",
+    // FIX: Changed invalid version 0.15.0 to valid version 0.14.0
+    "@flashbots/ethers-provider-bundle": "0.14.0", 
     "ethers": "^5.7.2",
     "express": "^4.18.2"
   },
