--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@flashbots/ethers-provider-bundle": "0.12.0", 
+    // FIX: Using version 1.0.0, which is the last version recorded for this package name.
+    "@flashbots/ethers-provider-bundle": "1.0.0", 
     "ethers": "^5.7.2",
     "express": "^4.18.2"
   },
