--- a/package.json
+++ b/package.json
@@ -1,29 +1,27 @@
 {
-  "name": "high-strategy-evm-mev-bot",
+  "name": "massive-trading-engine",
   "version": "1.0.0",
-  "description": "High-frequency EVM MEV strategy bot with worker pool.",
+  "description": "High-Frequency MEV Trading Engine",
   "main": "dist/index.js",
+  "type": "module", 
   "scripts": {
-    "prebuild": "rm -rf dist",
+    "clean": "rm -rf dist",
+    "prebuild": "npm run clean",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "dev": "ts-node src/index.ts"
   },
-  "keywords": [
-    "mev",
-    "flashbots",
-    "evm"
-  ],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    // FIX: Using version 1.0.0, which is the last version recorded for this package name.
-    "@flashbots/ethers-provider-bundle": "1.0.0", 
+    "axios": "^1.6.8",
+    "dotenv": "^16.4.5",
     "ethers": "^5.7.2",
-    "express": "^4.18.2"
+    "@flashbots/ethers-provider-bundle": "^0.6.0",
+    "express": "^4.18.3"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17",
-    "@types/node": "^20.10.0",
-    "typescript": "^5.3.2"
+    "@types/node": "^20.12.7",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5",
+    "@types/express": "^4.17.21"
   }
 }
