--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "dotenv": "^16.4.5",
     "ethers": "^5.7.2",
     "@flashbots/ethers-provider-bundle": "^0.6.0",
-    "express": "^4.18.3"
+    "express": "^4.18.3",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "@types/node": "^20.12.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
-    "@types/express": "^4.17.21"
+    "@types/express": "^4.17.21",
+    "@types/winston": "^2.4.4"
   }
 }
