--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,8 @@
     "rootDir": "./",
     "baseUrl": "./", // Base set to root
     "paths": {
-      // FINAL FIX: Use a simple wildcard to cover all internal files relative to the base URL
-      "src/*": ["src/*"], 
+      // FINAL FIX: Aggressively map the source folder to itself to solve visibility issues
+      "./*": ["./src/*"], 
       "*": ["node_modules/*", "*"] 
     },
     "strict": true,
